fix: fix css issue with horizontal scroll showing

--- a/src/styles/single-post.css
+++ b/src/styles/single-post.css
@@ -1,6 +1,6 @@
 .single-post__image {
     height: 250px;
-    width: 100%;
+    width: 102%;
 }
 
 .single-post__image--small {
